Fix browser action sidebar
Dashboard button was not covering up its text when collapsing the sidebar. Also, chart.js was not updating its value correctly.

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -29,7 +29,6 @@ $font-family-headings: Raleway, sans-serif;
 * DOM Sizes
 */
 $body-width:        500px;
-$body-max-height:   500px;
-$content-height:    380px;
+$content-height:    405px;
 $list-nav-height:   32px;
 $list-height:       $content-height - $list-nav-height;
